Changelog
=========

10.8-dev - (unreleased)
-----------------------
* Bug fix: harmonise table style on web and print.
  [demarant fixes #21009]
* Change: set font size to 9pt for printing from web and PDF.
  [demarant fixes #21455 and refs #20690]
* Bug fix: fixed CSS for locked icon displayed under plone.belowcontenttitle.documentbyline viewlet
  [ghicaale refs #21457]
* Feature: timeout dialog is now aware of ajax calls which modify the object
  [ghicaale refs #21457]
* Bug fix: fixed timeout dialog to be aware of DaViz ajax calls
  [ghicaale refs #21457]

10.7 - (2014-10-15)
-------------------
* Bug fix: Speedup History overlay within plone.app.viewlet by removing expensive
  check "isUpToDate"
  [voineali refs #21254]
* Bug fix: hide certain elements from print.
  [demarant]
* Feature: Use google Open Sans as primary font. Use fontFamily variable
  in css.
  [demarant fixes #20690]
* Change: removed FontAwesome declaration from presentation_styles.css
  now that we have eea-icons.css
  [ichimdav refs 21149]
* Bug fix: Fix Font-Awesome icons within PDFs generated with wkhtmltopdf
  [voineali refs #21149]
* Bug fix: fixed 404 message for PDF download when context is not published.
  [ghicaale refs #21253]
* Feature: hidden the "Events" from the top banner.
  [ghicaale refs #21123]
* Upgrade step: under /www/portal_actions/site_actions/manage_main delete
  the action with id "events"
  [ghicaale refs #21123]
* Bug fix: fixed atct_albumentry to display Disscusion Items
  [ghicaale]

10.6 - (2014-10-01)
-------------------
* Change: no longer show the restore dialog if the modification date of object
  is greater than that of the form restore data
  [ichimdav refs #21127]
* Change: rememberstate no longer saves the DavizVisualization contenttype
  [ichimdav refs #21127]
* Change: modified wording of info message letting the user know that the form
  has been modified between the time of the restoration date and now for the
  eea-rememberstate plugin
  [ichimdav]